--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,71 @@
   --action-color: #4b6587;
 }
 
+@font-face {
+  font-family: 'Lobster-Regular';
+  src: url('./fonts/Lobster-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'Lato-Regular';
+  src: url(./fonts/Lato-Regular.ttf);
+}
+
+@font-face {
+  font-family: 'Lato-Black';
+  src: url(./fonts/Lato-Black.ttf);
+}
+
+@font-face {
+  font-family: 'Lato-BlackItalic';
+  src: url(./fonts/Lato-BlackItalic.ttf);
+}
+
+@font-face {
+  font-family: 'Lato-Bold';
+  src: url(./fonts/Lato-Bold.ttf);
+}
+
+@font-face {
+  font-family: 'Lato-BoldItalic';
+  src: url(./fonts/Lato-BoldItalic.ttf);
+}
+
+@font-face {
+  font-family: 'Lato-Italic';
+  src: url(./fonts/Lato-Italic.ttf);
+}
+
+@font-face {
+  font-family: 'Lato-Light';
+  src: url(./fonts/Lato-Light.ttf);
+}
+
+@font-face {
+  font-family: 'Lato-LightItalic';
+  src: url(./fonts/Lato-LightItalic.ttf);
+}
+
+@font-face {
+  font-family: 'Lato-Thin';
+  src: url(./fonts/Lato-Thin.ttf);
+}
+
+@font-face {
+  font-family: 'Lato-ThinItalic';
+  src: url(./fonts/Lato-ThinItalic.ttf);
+}
+
+@font-face {
+  font-family: 'Rock-Salt';
+  src: url(./fonts/RockSalt-Regular.ttf);
+}
+
+@font-face {
+  font-family: 'SpecialElite-Regular';
+  src: url(./fonts/SpecialElite-Regular.ttf);
+}
+
 body {
   background-color: var(--lightest-color);
 }
