--- a/src/style.css
+++ b/src/style.css
@@ -6,11 +6,6 @@
 }
 
 @font-face {
-  font-family: 'Lobster-Regular';
-  src: url('./fonts/Lobster-Regular.ttf');
-}
-
-@font-face {
   font-family: 'Lato-Regular';
   src: url(./fonts/Lato-Regular.ttf);
 }
@@ -72,4 +67,5 @@
 
 body {
   background-color: var(--lightest-color);
+  font-family: 'Lato-Regular', 'Courier New', Courier, monospace;
 }
