--- a/src/style.css
+++ b/src/style.css
@@ -66,6 +66,7 @@
 }
 
 body {
+  margin: 0;
   background-color: var(--lightest-color);
   font-family: 'Lato-Regular', 'Courier New', Courier, monospace;
 }
