trying to us a template.html

--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,10 @@
   src: url(./fonts/SpecialElite-Regular.ttf);
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   background-color: var(--lightest-color);
