added the link information for the image as a comment in the css so I can us it later.

--- a/src/style.css
+++ b/src/style.css
@@ -103,5 +103,6 @@ ul {
 
 .mainContentContainer {
   background-image: url(./images/watercolor_background.jpg);
+  /* Image by <a href="https://pixabay.com/users/ractapopulous-24766/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2520238">JL G</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2520238">Pixabay</a> */
   background-size: cover;
 }
