wanted to start css because I am avoiding my js problem

--- a/src/style.css
+++ b/src/style.css
@@ -76,6 +76,11 @@ body {
   font-family: 'Lato-Regular', 'Courier New', Courier, monospace;
 }
 
+.topContainer {
+  display: grid;
+  width: 100%;
+}
+
 .sidebar {
   background-color: var(--neutral-color);
 }
