--- a/src/style.css
+++ b/src/style.css
@@ -111,6 +111,14 @@ ul {
   margin: 0;
 }
 
+button {
+  background-color: var(--action-color);
+  color: var(--lightest-color);
+  font-size: medium;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+}
+
 .mainContentContainer {
   background-image: url(./images/watercolor_background.jpg);
   /* Image by <a href="https://pixabay.com/users/ractapopulous-24766/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2520238">JL G</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2520238">Pixabay</a> */
@@ -146,4 +154,6 @@ ul {
 
 .taskForm {
   align-self: end;
+  display: grid;
+  gap: 0.25em;
 }
