--- a/src/style.css
+++ b/src/style.css
@@ -155,6 +155,11 @@ button {
   box-shadow: 5px 5px 5px rgb(96, 96, 96);
 }
 
+.deleteButton {
+  width: max-content;
+  justify-self: end;
+}
+
 .cardTitle {
   align-self: top;
   height: max-content;
