I changed the color of the side bar. I am suppose to be able to set it to view all task and give them a priority, but I feel done with this project. I will see how I feel tomorrow.

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 :root {
   --lightest-color: #f7f6f2;
-  --tan-color: #f0e5cf;
+  --tan-color: #ebdce9;
   --neutral-color: #c8c6c6;
   --action-color: #2c507f;
 }
@@ -86,7 +86,7 @@ body {
 }
 
 .sidebar {
-  background-color: var(--neutral-color);
+  background-color: var(--tan-color);
   grid-area: sidebar;
 }
 
