changed the sidebar background color again.

--- a/src/style.css
+++ b/src/style.css
@@ -86,7 +86,7 @@ body {
 }
 
 .sidebar {
-  background-color: var(--tan-color);
+  background-color: var(--lightest-color);
   grid-area: sidebar;
 }
 
