--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,11 @@
   src: url(./fonts/SpecialElite-Regular.ttf);
 }
 
+@font-face {
+  font-family: 'Linearicons';
+  src: url(./fonts/Linearions/Linearicons-Free.ttf);
+}
+
 html {
   scroll-behavior: smooth;
   height: 100%;
